[package]
name = "base"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true

hashlink = "0.8"
serde_json = "1"
stderrlog = "0.5"