[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }

anyhow.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
